--- a/BE/User_Recipe/src/main/resources/application.properties
+++ b/BE/User_Recipe/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=demo
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# Firebase 설정
+firebase.credentials.path=classpath:firebase-service-account.json
+firebase.project.id=opensource-a1209
+
+# 로깅 설정
+logging.level.org.springframework.web=DEBUG
+logging.level.my_refrigerator=DEBUG
