--- a/FE/package.json
+++ b/FE/package.json
@@ -8,12 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "chart.js": "^4.4.0",
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
