--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "firebase": "^11.8.1",
-    "react-chartjs-2": "^5.3.0"
+    "react-chartjs-2": "^5.3.0",
+    "recharts": "^2.15.3"
   }
 }
